app-deployment.yaml
---
# 3. The Application Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiz-todo-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wiz-todo-app
  template:
    metadata:
      labels:
        app: wiz-todo-app
    spec:
      serviceAccountName: wiz-vulnerable-sa # Attaches the admin privilege
      containers:
      - name: wiz-todo-app
        image: 571600855761.dkr.ecr.us-west-2.amazonaws.com/wiz-todo-app:latest
        ports:
        - containerPort: 8080
---
# 4. The Internal Service
apiVersion: v1
kind: Service
metadata:
  name: wiz-todo-service
  namespace: default
spec:
  selector:
    app: wiz-todo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
# 5. The Ingress Routing (Connects to your NGINX Load Balancer)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiz-todo-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wiz-todo-service
            port:
              number: 80
